--- a/Css/style.css
+++ b/Css/style.css
@@ -40,7 +40,10 @@ body {
 
 .social {
     position: relative;
+    max-width: 77.2rem;
     padding: 5.2rem 1.6rem;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .bg-top {
@@ -49,7 +52,7 @@ body {
     width: 100%;
     height: 12rem;
     top: 0;
-    right: 0px;
+    right: 0;
 }
 
 .bg-bottom {
@@ -57,8 +60,8 @@ body {
     background-image: url("../images/bg-pattern-bottom-mobile.svg");
     width: 100%;
     height: 30rem;
-    bottom: 0px;
-    right: 0px;    
+    bottom: 0;
+    right: 0;    
 }
     
 .social__header {
@@ -66,9 +69,8 @@ body {
 }
 
 .social__title {
-    font-size: 2.6rem;
-    max-width: 17rem;
-    margin: auto;
+    max-width: 22rem;
+    font-size: calc(2.325rem + 1.1vw);
     line-height: 0.9;
     color: var(--very-dark-magenta);
     margin-bottom: 1.3rem;
@@ -78,20 +80,26 @@ body {
     line-height: 1.5;
     color: var(--very-dark-magenta);
     max-width: 20.4rem;
+    margin: auto;
     font-size: 1.1rem;
     margin-bottom: 3rem;
 }
 
 .social__proof {
     text-align: center;
-    margin-bottom: 3.3rem;
+    margin: 0 auto 3.3rem;
+    
 }
 
 .social__content {
+    max-width: 29.4rem;
     margin-bottom: 1rem;
     border-radius: 8px;
     padding: 1rem 2rem;
     background-color: var(--light-grayish-magenta);
+    /* display: flex;
+    gap: 30px;
+    align-items: center; */
 }
 
 .social__starts {
@@ -112,6 +120,7 @@ body {
 }
 
 .card {
+    max-width: 23.2rem;
     background-color: var(--very-dark-magenta);
     padding: 1.9rem 2rem;
     border-radius: 0.8rem;
@@ -137,4 +146,74 @@ body {
 .card__text {
     line-height: 1.5;
     font-size: 1.1rem;
+}
+
+@media screen and (min-width: 50rem) {
+    .social__title {
+        text-align: left;
+        line-height: 1;
+    }
+
+    .social__paragraph {
+        text-align: left;
+        max-width: 27.4rem;
+    }
+
+    .social__proof {
+        width: 36rem;
+        height: 250px;
+        margin-left: auto;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .social__content {
+        margin-bottom: 0;
+        flex-basis: 29.4rem;
+    }
+
+    .social__content--left {
+        margin-right: auto;;
+    }
+
+    .social__content--right {
+        margin-left: auto;;
+    }
+
+    .social__cards {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-basis: 77.2rem;
+        height: 267px;
+    }
+        
+    .card {
+        margin-bottom: 0;
+    }
+
+    .card--top {
+        align-self: flex-start;
+    }
+
+    .card--down {
+        align-self: flex-end;
+    }
+
+    .bg-top {
+        width: 52%;
+        height: 22rem;
+        background-image: url("../images/bg-pattern-top-desktop.svg");
+        background-repeat: no-repeat;
+        background-position: top  right 180px ;    
+        left: 0;
+    }
+
+    .bg-bottom {
+        width: 85%;
+        height: 42rem;
+        background-image: url("../images/bg-pattern-bottom-desktop.svg");
+    }
 }
