--- a/Css/style.css
+++ b/Css/style.css
@@ -40,6 +40,7 @@ body {
 
 .social {
     position: relative;
+    width: 100%;
     max-width: 77.2rem;
     padding: 5.2rem 1.6rem;
     display: flex;
@@ -117,6 +118,7 @@ body {
 
 .social__cards {
     color: var(--white);
+    margin: auto;
 }
 
 .card {
@@ -148,7 +150,7 @@ body {
     font-size: 1.1rem;
 }
 
-@media screen and (min-width: 50rem) {
+@media screen and (min-width: 69.6rem) {
     .social__title {
         text-align: left;
         line-height: 1;
